# sommelier-app

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  export.py  onnx_infer.py  pyproject.toml  requirements.txt  solutions.ipynb  test.py  train.py
data/: idx_to_label.json  wine_cleaned_test.csv  wine_cleaned_val.csv  wine_keywords_test.csv  wine_keywords_val.csv  wine_sample_region_2022.csv  wine_sample_variety_2022.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/Component/: DarkMode.js  Input.js  Recommend.js  Select.js
models/: idx_to_keywords.json  idx_to_label.json  label_to_idx.json  model_summary.pkl  scores.json
notebooks/: bert.ipynb  data_prepare.ipynb  data_pretrained_embeddings.ipynb  grad_cam.ipynb  keywords_extraction.ipynb  playground.ipynb  solutions.ipynb  stacking.ipynb
report/: kao.sty  kaobiblio.sty  kaobook.cls  kaohandt.cls  kaotheorems.sty  main.lof  main.lot  main.tex
src/: data.py  model.py
