[tool.poetry]
name = "sommelier-app"
version = "0.1.0"
description = ""
authors = ["Jingsong Gao <512320254@qq.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.4"
datasets = "^2.4.0"
scipy = "1.8.1"
scikit-learn = "^1.1.2"
pytorch-lightning = "^1.7.5"
torch = "^1.12.1"
setuptools-rust = "1.0.0"
transformers = "^4.21.3"
matplotlib = "^3.5.3"
poethepoet = "^0.16.2"
torchmetrics = "^0.9.3"
tensorboard = "^2.10.0"
torch-tb-profiler = "^0.4.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.8.0"}
pre-commit = "^2.20.0"
ipykernel = "^6.15.2"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
